[metadata]
license_file = LICENSE
name = libcat.tvdb
version = 0.0.0
author = Brian M. Sheldon
author_email = brianmsheldon@users.noreply.github.com
description = TheTVDB.com api library
long_description = file:README.rst
url = https://github.com/python-libcat/tvdb
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
	=src
include_package_data = true
python_requires = >=3.8
install_requires =
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.packages.find]
where=src

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7
	pytest-cov
	pytest-mypy

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
